Fix landing and newcall pages on mobile (#16)
* removed unneeded rules

* fix landing and newcall pages on mobile

* apply prettier --write

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1998,6 +1998,12 @@ textarea.form-input {
   padding: 32px 24px;
 }
 
+@media (max-width: 640px) {
+  .section:first-of-type {
+    min-height: calc(100vh - (80px / 2));
+  }
+}
+
 .site-header {
   position: absolute !important;
   top: 0;
@@ -2080,7 +2086,7 @@ textarea.form-input {
 
 @media (max-width: 640px) {
   .header-nav-toggle {
-    /* display: block; */
+    display: block;
   }
 
   .header-nav-toggle + .header-nav {
@@ -2326,8 +2332,8 @@ textarea.form-input {
 
 .section-inner {
   position: relative;
-  padding-top: 0;
-  padding-bottom: 0;
+  padding-top: 48px;
+  padding-bottom: 48px;
 }
 
 .section-header {
@@ -2567,12 +2573,12 @@ ul.pricing-item-features-list li {
 }
 
 .cta .section-inner {
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 48px;
+  padding-bottom: 48px;
 }
 
 .cta-slogan {
-  margin-bottom: 15px;
+  margin-bottom: 40px;
 }
 
 @media (min-width: 641px) {
